--- a/admin/src/pages/Add/Add.css
+++ b/admin/src/pages/Add/Add.css
@@ -10,7 +10,7 @@
     gap: 20px;
 }
 
-.add-img-upload img {
+.add-image-upload img {
     width: 120px;
 }
 
@@ -27,10 +27,6 @@
     gap: 30px;
 }
 
-.add-category p {
-    margin-bottom: 10px;
-}
-
 .add-category-price select, .add-category-price input {
     max-width: 120px;
     padding: 10px;
@@ -43,4 +39,5 @@
     background-color: black;
     color: white;
     cursor: pointer;
+    margin-bottom: 10px;
 }
